# ai-mtg-dataset-creator

./: .gitignore  README.md  build_mtg_ai_dataset.py  pyproject.toml
